@@ -32,7 +32,11 @@
 - Fixed nil pointer during unenroll {pull}23609[23609]
 - Fixed reenroll scenario {pull}23686[23686]
 - Fixed make status readable in the log. {pull}23849[23849]
+<<<<<<< HEAD
 - Fixed Monitoring filebeat and metricbeat not connecting to Agent over GRPC {pull}23843[23843]
+=======
+- Windows agent doesn't uninstall with a lowercase `c:` drive in the path {pull}23998[23998]
+>>>>>>> d1e8b253da... [Ingest Manager] Windows agent doesn't uninstall with a lowercase `c:` drive in the path  (#23998)
 
 ==== New features
 
